Issue #SC-2128 feat: fixed akka configuration